Harden API norms, lifecycle, and hot-path allocations
Multi-dimension audit pass covering API spec compliance, lifecycle/logic
bugs, and allocation cleanup. No public signatures broken; all existing
tests pass.

API spec (fand-api):
- Replace Optional record components/fields with @Nullable in
  EnchantmentDefinition and CustomAdvancement (CODING_STANDARDS forbids
  Optional for fields), updating all call sites
- Add @NullMarked to 6 packages and create package-info for registry and
  world.generation (8 packages total)
- Document threading model on BiomeProvider, World async entity/explosion
  methods, ScopedStorage/PluginStorage, PlayerAccessService, GuiSlotHandler
- Document close-only-removes-self semantics on packet/recipe/command/
  scoreboard/event/permission registration handles
- Mark scoreboard/custom-block/custom-item/permission collection getters as
  immutable snapshots (verified implementations already copy)

Lifecycle and logic (fand-server):
- Isolate plugin context close failures so one plugin's storage flush
  cannot abort server/plugin shutdown; make RuntimePluginContext close
  idempotent and step-independent
- Make PermissionManager unregisterable (unregister/unregisterNamespaces);
  reclaim plugin-scoped permissions on unload so a changed default no longer
  fails reload; auto-registered command permissions are removed on unregister
- Make EntityRegistry thread-safe (ConcurrentHashMap network-id index) so
  async vehicle/passenger reads cannot corrupt the cache
- Cap attacker-controlled counts in RecipeTransfer and catch Throwable in
  JEI/REI/Fabric recipe handlers to stop OOMError escaping to Netty
- Bound Fabric recipe-sync serializer caches with Caffeine TTL/size so a
  configuration-stage disconnect cannot leak entries indefinitely
- Re-add tracked boss bars on BossBarTracker.rebind, mirroring scoreboard
  re-display on respawn handle refresh
- Serialize custom-block lifecycle teardown/creation and gui open/close to
  fix close-vs-ensure a